--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-arrow = "^1.3.0"
+python = "^3.10"
 zstandard = "^0.22.0"
-stanza = "^1.6.1"
+pysbd = "^0.3.4"
+joblib = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
