--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 zstandard = "^0.22.0"
 pysbd = "^0.3.4"
 joblib = "^1.3.2"
+tqdm = "^4.66.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
