--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ zstandard = "^0.22.0"
 pysbd = "^0.3.4"
 joblib = "^1.3.2"
 tqdm = "^4.66.1"
+lxml = "^4.9.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
