--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pysbd = "^0.3.4"
 joblib = "^1.3.2"
 tqdm = "^4.66.1"
 lxml = "^4.9.3"
+marisa-trie = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
