--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ marisa-trie = "^1.1.0"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
 pytest = "^7.4.3"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
