--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ joblib = "^1.3.2"
 tqdm = "^4.66.1"
 lxml = "^4.9.3"
 marisa-trie = "^1.1.0"
+plyvel-ci = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
