--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tqdm = "^4.66.1"
 lxml = "^4.9.3"
 marisa-trie = "^1.1.0"
 plyvel-ci = "^1.5.0"
+defusedxml = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
